<resources>
    <string name="app_name">FishIntel</string>
    <string name="nav_map">Map</string>
    <string name="nav_spots">Spots</string>
    <string name="nav_species">Species</string>
    <string name="nav_settings">Settings</string>
    <string name="title_spots">Fishing Spots in BC</string>
    <string name="title_species">Species in BC</string>
    <string name="title_settings">Settings</string>
    <string name="settings_temperature_unit">Temperature unit</string>
    <string name="settings_metric_unit">Metric unit</string>
    <string name="settings_celsius">Celsius</string>
    <string name="settings_fahrenheit">Fahrenheit</string>
    <string name="settings_metric">Metric (m)</string>
    <string name="settings_imperial">Imperial (ft)</string>
    <string name="settings_authors">Created by Charlie Chao and Shane Miao</string>
    <string name="spot_details_species_header">Available Species</string>
    <string name="spot_details_weather_header">Weather</string>
    <string name="spot_details_weather_waiting">Getting weather info…</string>
    <string name="spot_details_regulation_label">View area regulations</string>
    <string name="spot_details_regulation_last_updated">Last updated yesterday</string>
    <string name="spot_details_tides_header">Tides</string>
    <string name="species_details_found_header">Found In</string>
    <string name="google_maps_key">AIzaSyAZmIp6z1QHywsMsxgmhMiAPlMxshcgPWY</string>
    <string name="tides_status_waiting">Getting tides data…</string>
    <string name="tides_status_error_connect">Unable to get tides data :(</string>
    <string name="tides_status_error_parse">Failed to parse tides data :(</string>
    <string name="tides_status_error_invalid">Invalid station.</string>
    <string name="spot_details_weather_label">View additional forecast</string>
    <string name="main_license_label">Get BC fishing license</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_subtitle">Your pocket guide to fishing in BC</string>
    <string name="onboarding_next_label">Next</string>
    <string name="onboarding_next_go_label">Let\'s Go</string>
    <string name="onboarding_slide1_text">Find fishing spots.</string>
    <string name="onboarding_slide1_subtext">(in Vancouver Island only, for now)</string>
    <string name="onboarding_slide2_text">Get info on regulations, weather and tides forecast.</string>
    <string name="onboarding_slide3_text">Learn about species in the area.</string>
</resources>
