<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.charliechao.fishintel.SpeciesDetailsActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/spot_details_map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:focusableInTouchMode="true"
                android:onClick="openDirections" />

            <!--<TextView-->
            <!--android:id="@+id/spot_details_text_description"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--android:text="Description here..."-->
            <!--style="@style/AppTheme.TextAppearance" />-->

            <LinearLayout
                android:id="@+id/spot_details_button_regulations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/state_list_item_bg"
                android:onClick="openRegulationLink"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="8dp"
                    android:tint="@color/grayDark"
                    app:srcCompat="@drawable/ic_sim_card_alert_black_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spot_details_regulation_label"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spot_details_regulation_last_updated"
                        android:textColor="@color/grayDark" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:tint="@color/grayLight"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayTint"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/textView"
                    style="@style/AppTheme.List.Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/spot_details_species_header" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/spot_details_species_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/fragment_species_list_item" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spot_details_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@color/white">

                <TextView
                    style="@style/AppTheme.List.Header"
                    android:layout_width="442dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/spot_details_weather_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/spot_details_weather_img"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/weather_sunny" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/spot_details_weather_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.TextAppearance"
                            android:textStyle="bold"
                            android:text="@string/spot_details_weather_waiting" />

                        <TextView
                            android:id="@+id/spot_details_weather_condition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.TextAppearance"
                            android:text="-" />

                        <TextView
                            android:id="@+id/spot_details_weather_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.TextAppearance"
                            android:text="-" />

                        <TextView
                            android:id="@+id/spot_details_weather_wind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.TextAppearance"
                            android:text="-" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spot_details_tides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:background="@color/white">

                <TextView
                    style="@style/AppTheme.List.Header"
                    android:layout_width="442dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/spot_details_tides_header" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>